--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,11 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
+    "types": ["vite/client"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -20,5 +24,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts","src/*.vue", "src/**/*.tsx", "src/**/*.vue","src/common/components/*.vue"]
+  "include": ["src/**/*.ts","src/*.vue", "src/**/*.d.ts", "src/**/*.vue","src/common/**/*.vue",
+  "src/**/*.ts",
+  "src/**/*.d.ts",
+  "src/**/*.vue",
+  "src/common/**/*.ts"]
 }
