--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@buf/ahmeddarwish_abc-api.connectrpc_es": "^1.5.0-20240922000730-48c8686bc3cc.1",
     "@bufbuild/connect-web": "^0.13.0",
     "@connectrpc/connect": "^1.5.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@primevue/themes": "^4.0.7",
     "@types/node": "^22.5.5",
     "dexie": "^4.0.8",
     "pinia": "^2.2.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
+    "swiper": "^8.4.7",
     "vue": "^3.4.37",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-i18n": "^10.0.3",
     "vue-router": "^4.4.5"
   },
