--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@connectrpc/connect": "^1.5.0",
     "@primevue/themes": "^4.0.7",
     "@types/node": "^22.5.5",
+    "@vueuse/core": "^11.1.0",
     "dexie": "^4.0.8",
     "pinia": "^2.2.2",
     "primeicons": "^7.0.0",
